main app/manifest/pingpong_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: pong
  # config for a pod
  template:
    metadata:
      labels:
        app: pong
    spec: 
      # volumes:
      # - name: shared-counter
      #   persistentVolumeClaim:
      #     claimName: counter-claim
      containers:
      - name: pong
        image: acrmk.azurecr.io/demo-pingpong-app
        readinessProbe:
          initialDelaySeconds: 10 # Initial delay until the readiness is tested
          periodSeconds: 5 # How often to test
          httpGet:
             path: /healthz
             port: 3541
        ports:
        - containerPort: 5000

        # volumeMounts:
        # - mountPath: /usr/src/app/files
        #   name: shared-counter
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-service
spec:
  selector:
    app: pong
  # type:  LoadBalancer
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
